test_inputs/good/unused_call_result.lat
int dummy() {
    printString("dummy");
    return 2;
}

int main() {
    int a = dummy();
    return 0;
}
