test_inputs/bad/duplicate_argument.lat
int fun(int a, int a) {
    return 0;
}

int main() {
    return 0;
}
